[gd_scene load_steps=2 format=3 uid="uid://bguejp0j2umuo"]

[ext_resource type="Script" uid="uid://1k0a4w86uifm" path="res://start_screen.gd" id="1_ncxyx"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_ncxyx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.5
offset_top = -156.0
offset_right = 222.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 76
text = "Aqua Assets"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Start Game"

[node name="CustomiseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Customise Character"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Exit"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CustomiseButton" to="." method="_on_customise_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
